app/layout/core/core.module.css
.coreLayout_container {
  display: grid;
  grid-template-columns: min-content 1fr;
  grid-template-rows: 8rem 1fr 6rem;
  gap: 0px 0px;
  grid-template-areas:
    "header header"
    "aside main"
    "footer footer";
  height: 100dvh;
}
.coreLayout_container > header {
  grid-area: header;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: var(--white);
  color: var(--black);
  padding: 0 2rem;
  box-shadow: 0 -20px 6px -20px rgba(0, 0, 0, 0.5) inset;
  border-bottom: 0.1rem solid var(--mid-grey);
}
/* ScribeCMS LOGO */
.logoContainer > h4 {
  font-size: 3.8rem;
  font-weight: 300;
  margin: 0;
}
.logoContainer > h4 > span {
  font-weight: 800;
}
.logoContainer > h6 {
  font-size: 1.4rem;
  font-weight: 300;
  margin: 0;
  display: flex;
  align-items: center;
}
.logoContainer > h6 > span > svg {
  height: 1.6rem;
  margin-left: 1rem;
}

/* HEADER Right-aligned container */
.userContainer {
  display: flex;
  align-items: center;
  gap: 1rem;
}
/* HEADER USER DEETS */
.userProfile {
  display: flex;
  align-items: center;
  flex-direction: row;
}
.userProfile > .userName {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: space-around;
}
.userProfile > .userName > span.displayName {
  font-size: 1.6rem;
  margin-right: 1rem;
  font-weight: 600;
}
.userProfile > .userName > span.handle {
  font-size: 1.1rem;
  margin-right: 1rem;
  color: var(--mid-grey);
}
.userProfile > img.userAvatar {
  height: 5rem;
  width: 5rem;
  border-radius: 50%;
}
.exitButton {
  padding: 0.4rem !important;
}
.exitButton > svg {
  height: 4rem;
  width: 4rem;
}

/* ASIDE Menu container */
.coreLayout_container > aside {
  grid-area: aside;
  background: var(--blue);
  width: 6rem;
}

.coreLayout_container > main {
  position: relative;

  height: auto;
  grid-area: main;
  background: var(--black);
  color: var(--white);

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  overflow: auto;
}
/* Footer container */
.coreLayout_container > footer {
  grid-area: footer;
  box-shadow: 0 20px 6px -20px rgba(0, 0, 0, 0.5) inset;
  border-top: 0.1rem solid var(--mid-grey);

  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding: 0 1rem;
}
.coreLayout_container > footer > button {
  height: 4rem;
  padding: 0 1rem;
}

